chore: hardening safeguards (generic boundaries)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
+    "guard:isolation": "node tooling/scripts/isolation-check.mjs",
+    "guard:bundle": "npm run build && node tooling/scripts/bundle-check.mjs",
     "cap:init:android": "npx cap add android",
     "cap:init:ios": "npx cap add ios",
     "cap:sync": "npx cap sync",
@@ -29,6 +33,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@react-pdf/renderer": "^4.3.2",
     "clsx": "^2.1.1",
+    "dexie": "^4.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.294.0",
@@ -38,14 +43,21 @@
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.6.0",
     "uuid": "^13.0.0",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@capacitor/cli": "^8.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^17.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^7.3.1"
