--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@react-pdf/renderer": "^4.3.2",
     "clsx": "^2.1.1",
     "dexie": "^4.3.0",
+    "docxtemplater": "^3.67.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.294.0",
+    "pizzip": "^3.2.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
